--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
   <script>
     async function handleClick() {
       let response = await fetch("https://YOUR_LAMBDA_URL_HERE");
       let text = await response.text();
       document.getElementById("response").innerHTML = text;
-      document.getElementById("img").src = 'https://images.unsplash.com/photo-1540573133985-87b6da6d54a9';
+      document.getElementById("img").src =
+        "https://images.unsplash.com/photo-1540573133985-87b6da6d54a9";
     }
   </script>
   <body>
     <div align="center">
       <br /><br /><br /><br />
       <h1>
-        Hello </span
-        ><span id="response">all! What happens when you click on the button below?</span>
+        Hello<span id="response"
+          >all! What happens when you click on the button below?</span
+        >
       </h1>
 
       <button onclick="handleClick()">Click me</button><br />
@@ -26,4 +34,3 @@
     </div>
   </body>
 </html>
-
