--- a/error.html
+++ b/error.html
@@ -1,4 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Error</title>
+  </head>
   <body>
     <h1>There has been an error!</h1>
   </body>
