--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <br><br><br><br>
       <h1>
         Hello <span id="response"
-          >all! What happens when you click on the button below?</span
+          >Jake! What happens when you click on the button below?</span
         >
       </h1>
 
