API changed to autodeploy

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       >
       <script>
         async function handleClick() {
-          let response = await fetch("https://dqb78orhak.execute-api.eu-west-2.amazonaws.com/stageone/jakeslambda");
+          let response = await fetch("https://a0bko6n3c7.execute-api.eu-west-2.amazonaws.com/jakeslambda");
           let text = await response.text();
           document.getElementById("response").innerHTML = text;
           document.getElementById("img").src =
