--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       >
       <script>
         async function handleClick() {
-          let response = await fetch("https://1j0nqa41z4.execute-api.eu-west-2.amazonaws.com/jakeslambda2");
+          let response = await fetch("https://syemhmz921.execute-api.eu-west-2.amazonaws.com/stageone/jakeslambda2");
           let text = await response.text();
           document.getElementById("response").innerHTML = text;
           document.getElementById("img").src =
